// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleEditor matches snapshot no tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp5-button bp5-minimal left"
      type="button"
    >
      <span
        class="bp5-button-text"
      >
        loadForever(1x)
      </span>
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp5-button bp5-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp5-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp5-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp5-card bp5-elevation-2"
      >
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <div
                class="bp5-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="bp5-html-select bp5-fill"
              >
                <select>
                  <option
                    value="test1"
                  >
                    test1
                  </option>
                  <option
                    value="test2"
                  >
                    test2
                  </option>
                  <option
                    value="test3"
                  >
                    test3
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp5-control-group bp5-numeric-input"
                role="group"
              >
                <div
                  class="bp5-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    autocomplete="off"
                    class="bp5-input"
                    id="numericInput-0"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="1"
                  />
                </div>
                <div
                  class="bp5-button-group bp5-vertical bp5-fixed"
                >
                  <button
                    aria-controls="numericInput-0"
                    aria-label="increment"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-0"
                    aria-label="decrement"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp5-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <button
              class="bp5-button bp5-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp5-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with broadcast rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp5-button bp5-minimal left"
      type="button"
    >
      <span
        class="bp5-button-text"
      >
        broadcastByInterval(2010-01-01/2015-01-01)
      </span>
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp5-button bp5-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp5-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp5-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp5-card bp5-elevation-2"
      >
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <div
                class="bp5-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp5-input-group"
              >
                <input
                  class="bp5-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with existing tier and non existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp5-button bp5-minimal left"
      type="button"
    >
      <span
        class="bp5-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 3x)
      </span>
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp5-button bp5-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp5-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp5-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp5-card bp5-elevation-2"
      >
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <div
                class="bp5-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp5-input-group"
              >
                <input
                  class="bp5-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="bp5-html-select bp5-fill"
              >
                <select>
                  <option
                    value="test1"
                  >
                    test1
                  </option>
                  <option
                    value="test2"
                  >
                    test2
                  </option>
                  <option
                    value="test3"
                  >
                    test3
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp5-control-group bp5-numeric-input"
                role="group"
              >
                <div
                  class="bp5-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp5-input"
                    id="numericInput-3"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp5-button-group bp5-vertical bp5-fixed"
                >
                  <button
                    aria-controls="numericInput-3"
                    aria-label="increment"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-3"
                    aria-label="decrement"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp5-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="bp5-control-group"
              role="group"
            >
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="bp5-html-select bp5-fill"
              >
                <select>
                  <option
                    value="nonexist"
                  >
                    nonexist
                  </option>
                  <option
                    value="test2"
                  >
                    test2
                  </option>
                  <option
                    value="test3"
                  >
                    test3
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp5-control-group bp5-numeric-input"
                role="group"
              >
                <div
                  class="bp5-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    autocomplete="off"
                    class="bp5-input"
                    id="numericInput-4"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="1"
                  />
                </div>
                <div
                  class="bp5-button-group bp5-vertical bp5-fixed"
                >
                  <button
                    aria-controls="numericInput-4"
                    aria-label="increment"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-4"
                    aria-label="decrement"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp5-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <button
              class="bp5-button bp5-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp5-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp5-button bp5-minimal left"
      type="button"
    >
      <span
        class="bp5-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 2x)
      </span>
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp5-button bp5-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp5-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp5-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp5-card bp5-elevation-2"
      >
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <div
                class="bp5-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp5-input-group"
              >
                <input
                  class="bp5-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="bp5-html-select bp5-fill"
              >
                <select>
                  <option
                    value="test1"
                  >
                    test1
                  </option>
                  <option
                    value="test2"
                  >
                    test2
                  </option>
                  <option
                    value="test3"
                  >
                    test3
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp5-control-group bp5-numeric-input"
                role="group"
              >
                <div
                  class="bp5-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp5-input"
                    id="numericInput-2"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp5-button-group bp5-vertical bp5-fixed"
                >
                  <button
                    aria-controls="numericInput-2"
                    aria-label="increment"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-2"
                    aria-label="decrement"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp5-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <button
              class="bp5-button bp5-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp5-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with non existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp5-button bp5-minimal left"
      type="button"
    >
      <span
        class="bp5-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 2x)
      </span>
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp5-button bp5-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp5-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp5-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp5-card bp5-elevation-2"
      >
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <div
                class="bp5-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp5-input-group"
              >
                <input
                  class="bp5-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <div
              class="bp5-control-group"
              role="group"
            >
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="bp5-html-select bp5-fill"
              >
                <select>
                  <option
                    value="nonexist"
                  >
                    nonexist
                  </option>
                  <option
                    value="test1"
                  >
                    test1
                  </option>
                  <option
                    value="test2"
                  >
                    test2
                  </option>
                  <option
                    value="test3"
                  >
                    test3
                  </option>
                </select>
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      style="transform-origin: center;"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                    />
                  </svg>
                </span>
              </div>
              <button
                class="bp5-button bp5-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp5-control-group bp5-numeric-input"
                role="group"
              >
                <div
                  class="bp5-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp5-input"
                    id="numericInput-1"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp5-button-group bp5-vertical bp5-fixed"
                >
                  <button
                    aria-controls="numericInput-1"
                    aria-label="increment"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-1"
                    aria-label="decrement"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                          fill-rule="evenodd"
                          style="transform-origin: center;"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp5-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp5-form-group"
        >
          <div
            class="bp5-form-content"
          >
            <button
              class="bp5-button bp5-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp5-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
